# Teddy

./: .gitignore  CMakeLists.txt
cmake/: FindSDL2.cmake
res/shaders/: basic.frag  basic.vert
src/: CMakeLists.txt  main.cc
src/engine/: application.cc  application.h
src/engine/game/: entity.cc  entity.h  gameobject.cc  gameobject.h
src/engine/graphics/: opengl.h  renderer.cc  renderer.h  shader.cc  shader.h  sprite.cc  sprite.h  texture.cc  texture.h
src/engine/util/: transform.cc  transform.h
src/game/: testgame.cc  testgame.h
